    the parent - these needed to allow a merge()
    operation to pass through without effect.

  - Specifying a non-column based argument
    for column_mapped_collection, including string,
    text() etc., will raise an error message that
    specifically asks for a column element, no longer
    misleads with incorrect information about
    text() or literal().  [ticket:1863]

  - Dynamic attributes don't support collection 
    population - added an assertion for when
    set_committed_value() is called, as well as
    when joinedload() or subqueryload() options
    are applied to a dynamic attribute, instead
    of failure / silent failure.  [ticket:1864]

  - Fixed bug whereby generating a Query derived
    from one which had the same column repeated
    with different label names, typically 
    in some UNION situations, would fail to 
    propagate the inner columns completely to
    the outer query.  [ticket:1852]

  - object_session() raises the proper 
    UnmappedInstanceError when presented with an
    unmapped instance.  [ticket:1881]
    
- sql
  - Added basic math expression coercion for 
    Numeric->Integer,
    so that resulting type is Numeric regardless
    of the direction of the expression.
    
  - Changed the scheme used to generate truncated
    "auto" index names when using the "index=True"
    flag on Column.   The truncation only takes
    place with the auto-generated name, not one
    that is user-defined (an error would be 
    raised instead), and the truncation scheme 
    itself is now based on a fragment of an md5
    hash of the identifier name, so that multiple
    indexes on columns with similar names still
    have unique names.  [ticket:1855]

  - The generated index name also is based on 
    a "max index name length" attribute which is
    separate from the "max identifier length" - 
    this to appease MySQL who has a max length
    of 64 for index names, separate from their
    overall max length of 255.  [ticket:1412]
